--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1852,7 +1852,9 @@ label {
 }
 
 .payment_page {
-    background: rgba(54, 54, 54, 0.415);
+    background: rgba(54, 54, 54, 0.591);
+    backdrop-filter: blur( 12px );
+    -webkit-backdrop-filter: blur( 12px );
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -1885,7 +1887,7 @@ label {
 
 #kop {
     text-align: left;
-    color: #433737;
+    color: #fcf0e7;
     padding-left: 1rem;
 }
 
@@ -1979,7 +1981,7 @@ label {
     height: 13rem;
     overflow: hidden;
     text-align: center;
-    background: rgba(86, 63, 63, 0.25);
+    background: #0C2D57;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
@@ -1992,7 +1994,7 @@ label {
 #uio {
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
-    background: rgba(149, 115, 115, 0.527);
+    background: #4a607d;
     height: 100%;
     width: 50%;
     position: absolute;
@@ -2008,7 +2010,7 @@ label {
 #uio2 {
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
-    background: rgba(149, 115, 115, 0.527);
+    background: #4a607d;
     height: 100%;
     width: 50%;
     position: absolute;
@@ -2034,14 +2036,14 @@ label {
     font-size: 1.5rem;
     font-weight: 600;
     padding-bottom: 1rem;
-    color: #423535;
+    color: #fcfdff;
 }
 
 .bottomdi p:nth-child(2) {
     font-size: 1rem;
     font-weight: 600;
     text-transform: uppercase;
-    color: #44444493;
+    color: #e1eeff;
     padding-bottom: 1rem;
 }
 
@@ -2051,7 +2053,7 @@ label {
     padding-bottom: 1rem;
     text-align: left;
     padding-left: 2rem;
-    color: #423535;
+    color: #fcfdff;
 }
 
 .gyj {
